@@ -2,6 +2,9 @@
 
 New XBrief session added by special request.
 Add "Confirm Quit Session" when "Main Menu" hit on learning screen.
+UI adjustments for "Challenge Cards".
+Added brief delay of challenge card if a touch down is detected at "show" time.
+Added brief disablement of 'check' button to try and reduce 'click-through'.
 
 1.75
 
